--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">AppDio</string>
-    <string name="hello_world">Testando diversos idiomas</string>
+    <string name="hello_world">Testando diversos idiomas!</string>
 </resources>
