--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AppDio</string>
-    <string name="hello_world">Probando diferentes idiomas</string>
+    <string name="hello_world">Probando diferentes idiomas!</string>
 </resources>
